# ignorant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-binaries.yml
src/: main.rs  user_agents.rs
src/modules/: amazon.rs  instagram.rs  mod.rs  snapchat.rs
tests/: integration_tests.rs
