[package]
name = "ignorant-rs"
version = "0.1.2"
edition = "2024"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
description = "A phone number OSINT tool for checking if a phone number is associated with accounts on various platforms"
documentation = "https://docs.rs/ignorant"
homepage = "https://github.com/jonaylor89/ignorant"
repository = "https://github.com/jonaylor89/ignorant"
license = "GPL-3.0"
keywords = ["osint", "phone", "investigation", "security", "privacy"]
categories = ["command-line-utilities", "web-programming::http-client"]
readme = "README.md"

[[bin]]
name = "ignorant"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
scraper = "0.19"
hmac = "0.12"
sha2 = "0.10"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
indicatif = "0.17"
anyhow = "1.0"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
